[gd_scene load_steps=5 format=3 uid="uid://c2awphl8ure0t"]

[ext_resource type="Script" uid="uid://drkdglml3xd8a" path="res://DisplaySettings.gd" id="1_q5hmi"]
[ext_resource type="Texture2D" uid="uid://ba5toq1ngtefl" path="res://MultiResolution.png" id="2_ovbtg"]
[ext_resource type="Script" uid="uid://cupiq2oe6fcfd" path="res://WindowSizeItem.gd" id="2_xfram"]
[ext_resource type="Texture2D" uid="uid://d3em6xfc6u46t" path="res://GeorgeCarlin.png" id="3_ovbtg"]

[node name="DisplaySettings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 251.0
offset_bottom = 96.0
script = ExtResource("1_q5hmi")

[node name="TR_ScreenSize" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 3440.0
offset_bottom = 1440.0
texture = ExtResource("2_ovbtg")

[node name="TR_Carlin" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 251.0
offset_right = 320.0
offset_bottom = 75.0
texture = ExtResource("3_ovbtg")
expand_mode = 1

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.279
anchor_bottom = 1.885
offset_right = -2135.68
offset_bottom = -1855.8
current_tab = 0

[node name="WindowSize" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="WindowSizeItem" type="Node" parent="TabContainer/WindowSize"]
script = ExtResource("2_xfram")

[node name="Label" type="Label" parent="TabContainer/WindowSize"]
layout_mode = 2
text = "Select Window Size:"

[node name="OB_SetWindowSize" type="OptionButton" parent="TabContainer/WindowSize"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true

[node name="ContentScale" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/ContentScale"]
layout_mode = 2
text = "Select Content Scale Size:"

[node name="OB_SetContentScaleSize" type="OptionButton" parent="TabContainer/ContentScale"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true

[node name="Label2" type="Label" parent="TabContainer/ContentScale"]
layout_mode = 2
text = "Select Content Scale Mode:"

[node name="OB_SetContentScaleMode" type="OptionButton" parent="TabContainer/ContentScale"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true

[node name="StretchModes" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="TabContainer/StretchModes"]
layout_mode = 2
text = "Select Aspect Ratio:"

[node name="OB_SetAspectRatio" type="OptionButton" parent="TabContainer/StretchModes"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true

[node name="L_ScaleSelect" type="Label" parent="TabContainer/StretchModes"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Scale:"

[node name="HS_SetScale" type="HSlider" parent="TabContainer/StretchModes"]
unique_name_in_owner = true
layout_mode = 2
max_value = 4.0
step = 0.2
value = 1.0

[node name="Label3" type="Label" parent="TabContainer/StretchModes"]
layout_mode = 2
text = "Select Scale Stretch Mode:"

[node name="OB_SetScaleStretchMode" type="OptionButton" parent="TabContainer/StretchModes"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScreenSelector" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="L_CurrentScreenRes" type="Label" parent="TabContainer/ScreenSelector"]
unique_name_in_owner = true
layout_mode = 2
text = "Current Screen Res: "

[node name="Label" type="Label" parent="TabContainer/ScreenSelector"]
layout_mode = 2
text = "Select Screen to Display Game:"

[node name="OB_SetScreen" type="OptionButton" parent="TabContainer/ScreenSelector"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="TabContainer/ScreenSelector"]
layout_mode = 2
text = "Select Window Mode:"
metadata/_edit_use_anchors_ = true

[node name="OB_SetWindowMode" type="OptionButton" parent="TabContainer/ScreenSelector"]
unique_name_in_owner = true
layout_mode = 2
